docker/kuber-rancher-nginx/haproxy-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy-ingress
  template:
    metadata:
      labels:
        app: haproxy-ingress
    spec:
      containers:
      - name: haproxy-ingress-controller
        image: haproxytech/kubernetes-ingress:v1.9.0 # Use the latest version as needed.
        args:
          - --configmap=haproxy-controller/haproxy-ingress-config # ConfigMap reference for HAProxy settings.
          - --default-ssl-certificate=haproxy-controller/haproxy-tls # TLS certificate if needed.
          - --ingress.class=haproxy # Specify ingress class.
        ports:
          - containerPort: 80
          - containerPort: 443

---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress-service
spec:
  type: LoadBalancer # Change to NodePort if needed.
  ports:
    - port: 80
      targetPort: 80
    - port: 443
      targetPort: 443
  selector:
    app: haproxy-ingress
